--- a/week2/templates/did_you_mean.jinja2
+++ b/week2/templates/did_you_mean.jinja2
@@ -2,9 +2,10 @@
   <div>
     {% if (search_response.suggest.phrase_suggest is defined or search_response.suggest.term_suggest is defined)
       and (search_response.suggest.phrase_suggest|length > 0 or search_response.suggest.term_suggest|length > 0)
-      and (search_response.suggest.phrase_suggest[0].options|length  > 0 or (
-        search_response.suggest.term_suggest.options is defined and
-        search_response.suggest.term_suggest[0].options|length  > 0)) %}
+      and (search_response.suggest.phrase_suggest[0] is defined and 
+           search_response.suggest.phrase_suggest[0].options|length  > 0 or (
+           search_response.suggest.term_suggest.options is defined and
+           search_response.suggest.term_suggest[0].options|length  > 0)) %}
       Did you mean?
     {% endif %}
     {% if search_response.suggest.phrase_suggest is defined and search_response.suggest.phrase_suggest|length > 0 and search_response.suggest.phrase_suggest[0].options|length > 0 %}
